feat: 新增 push 代码提示是否跳转 pull request 页面功能 支持 github, gitlab, bitbucket

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -95,6 +95,11 @@
       "resetSoft": "Reset (Soft)",
       "resetMixed": "Reset (Mixed)",
       "resetHard": "Reset (Hard)"
+    },
+    "postPush": {
+      "createPullRequestPrompt": "Branch \"{0}\" wurde gepusht. Einen Pull Request erstellen? (Schließt in {1}s)",
+      "openPullRequestAction": "Pull Request öffnen",
+      "dismissAction": "Später"
     }
   }
 }
