--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -24,7 +24,41 @@
       "resetStash": "Сбросить настройку stash",
       "configureProxy": "Настроить прокси",
       "refreshProxy": "Показать состояние прокси",
+      "manageRemotes": "Управление удалёнными",
       "changeLanguage": "Изменить язык"
+    },
+    "remoteManager": {
+      "title": "Управление удалёнными",
+      "description": "Просматривайте, изменяйте, добавляйте или удаляйте удалённые репозитории текущего проекта.",
+      "name": "Имя",
+      "url": "Адрес",
+      "actions": "Действия",
+      "empty": "Удалённые репозитории не настроены.",
+      "close": "Закрыть",
+      "addButton": "Добавить удалённый",
+      "addNamePlaceholder": "Имя удалённого (например, origin)",
+      "addUrlPlaceholder": "URL удалённого (https://... или git@...)",
+      "status": {
+        "loading": "Идёт загрузка удалённых...",
+        "working": "Изменения применяются...",
+        "awaitingConfirmation": "Подтвердите действие в диалоге VS Code..."
+      },
+      "buttons": {
+        "save": "Сохранить",
+        "delete": "Удалить"
+      },
+      "messages": {
+        "loadFailed": "Не удалось загрузить удалённые: {0}",
+        "operationFailed": "Ошибка при выполнении операции с удалённым: {0}",
+        "addSuccess": "Удалённый «{0}» добавлен",
+        "updateSuccess": "Удалённый «{0}» обновлён",
+        "removeSuccess": "Удалённый «{0}» удалён",
+        "removeCancelled": "Удаление удалённого отменено",
+        "invalidName": "Требуется имя удалённого репозитория",
+        "invalidUrl": "Требуется URL удалённого репозитория",
+        "duplicateName": "Удалённый «{0}» уже существует",
+        "removeConfirm": "Удалить удалённый «{0}»?"
+      }
     },
     "gitOperations": {
       "pull": "Pull",
