fix: 按钮文本展示

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -65,7 +65,8 @@
       "push": "Push",
       "fetch": "Fetch",
       "clone": "Klonen",
-      "checkout": "Checkout"
+      "checkout": "Checkout",
+      "settings": "Einstellungen"
     },
     "errors": {
       "noWorkspace": "Kein Arbeitsbereichsordner gefunden",
